fix: white bg overflow

--- a/apps/marginfi-v2-ui/src/styles/globals.css
+++ b/apps/marginfi-v2-ui/src/styles/globals.css
@@ -68,6 +68,7 @@ body {
   max-width: 100vw;
   min-height: 100%;
   overflow-x: hidden;
+  background: #090a0a;
 }
 
 body {
